--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -8,7 +8,7 @@
 .header-bg{
     margin: 40px 0px;
     height: 34vw;
-    background: url("./header_img.png");
+    background: url(./header_img.png);
     background-repeat: no-repeat;
     background-size: contain;
     width: 80%;
