--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -9,7 +9,7 @@
     margin: 40px 0px;
     height: 34vw;
     background: url("./assets/header_img.png");
-    background-color :tomato;
+/*     background-color :tomato; */
     background-repeat: no-repeat;
     background-size: contain;
     width: 80%;
